--- a/sass/style.scss
+++ b/sass/style.scss
@@ -383,7 +383,8 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 }
 .fh5co-cover {
-	height: 900px;
+	height: 100vh;
+	min-height: 600px;
 	background-size: cover;
 	// background-position: center center;
 	background-repeat: no-repeat;
